[add] stateController and ApiResponse

--- a/MiniBankingSystem.BusinessLogic/MiniBankingSystem.BusinessLogic.csproj
+++ b/MiniBankingSystem.BusinessLogic/MiniBankingSystem.BusinessLogic.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MiniBankingSystem.DataAccess\MiniBankingSystem.DataAccess.csproj" />
+    <ProjectReference Include="..\MiniBankingSystem.Entities\MiniBankingSystem.Entities.csproj" />
+    <ProjectReference Include="..\MiniBankingSystem.Utils\MiniBankingSystem.Utils.csproj" />
+  </ItemGroup>
+
 </Project>
