--- a/MiniBankingSystem.API/appsettings.json
+++ b/MiniBankingSystem.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Server=.;Database=BankingManagementSystem;User ID=sa;Password=root;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  }
 }
