--- a/MiniBankingSystem.DataAccess/MiniBankingSystem.DataAccess.csproj
+++ b/MiniBankingSystem.DataAccess/MiniBankingSystem.DataAccess.csproj
@@ -13,4 +13,8 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.18" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\MiniBankingSystem.Constants\MiniBankingSystem.Constants.csproj" />
+	</ItemGroup>
+
 </Project>
